# wf-viewer

./: Makefile  README.md  lint-requirements.txt  pyproject.toml  requirements.txt
viewer/: main.py
viewer/cli/: arguments.py  priority.py  schema.py
viewer/core/: entity.py  utils.py
viewer/render/: render.py  report.py  stats.py  utils.py
viewer/translator/: cwltool.py  toil.py
viewer/translator/cwltool/: log.py  manager.py
viewer/translator/streamflow/: log.py  manager.py  report.py
viewer/translator/toil/: log.py  manager.py
